se crea el controller de metas y la vista metas

--- a/Views/login/Registro.cshtml
+++ b/Views/login/Registro.cshtml
@@ -91,7 +91,7 @@
                 <label class="form-check-label" for="terminos">Acepto los términos y condiciones</label>
             </div>
 
-            <a href="iniciar sesion.html" type="button" class="btn btn-primary btn-block" onclick="registrarUsuario()">Registrarse</a>
+            <a href="@Url.Action("Metas", "Metas")" type="button" class="btn btn-primary btn-block" onclick="registrarUsuario()">Registrarse</a>
         </form>
     </div>
 </body>
